src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxBracket__c</fullName>
        <label>Tax Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>28%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TaxId__c</fullName>
        <label>Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__WeddingAnniversary__c</fullName>
        <description>Date of wedding anniversary.</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jigsaw_Contact_ID__c</fullName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Record_Type_ID__c</fullName>
        <label>Legacy Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Date__c</fullName>
        <label>License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label>Licenses</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Liquid_Net_Worth__c</fullName>
        <label>Liquid Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(0) $0 - $24,999</fullName>
                </value>
                <value>
                    <fullName>(1) $25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>(2) $50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>(3) $100,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>(4) $200,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>(5) $300,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>(6) $500,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>(7) $1,000,000 and over</fullName>
                </value>
                <value>
                    <fullName>(Z) Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Martial_Status__c</fullName>
        <label>Martial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Record_ID__c</fullName>
        <label>Master Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(0) $0 - 99,999</fullName>
                </value>
                <value>
                    <fullName>(1) $100,000 - 249,000</fullName>
                </value>
                <value>
                    <fullName>(2) $250,000 - 499,000</fullName>
                </value>
                <value>
                    <fullName>(3) $500,000 - 999,999</fullName>
                </value>
                <value>
                    <fullName>(4) $1,000,000 - 1,499,999</fullName>
                </value>
                <value>
                    <fullName>(5) $1,500,000 - 2,499,999</fullName>
                </value>
                <value>
                    <fullName>(6) $2,500,000 - 3,499,999</fullName>
                </value>
                <value>
                    <fullName>(7) $3,500,000 and over</fullName>
                </value>
                <value>
                    <fullName>(Z) Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Officer_Director_or_10_shareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Officer, Director or 10% shareholder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Renter__c</fullName>
        <label>Owner / Renter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo_Url__c</fullName>
        <label>Photo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <formula>Account.Plans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rep_Numbers__c</fullName>
        <formula>Account.Rep_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Reports To)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_in_Household_Entity__c</fullName>
        <label>Role in Household/Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Household Contact</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saluatation__c</fullName>
        <label>Saluatation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <label>Second Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source_of_Wealth__c</fullName>
        <label>Source of Wealth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sr_Military_Gov_t_Political_Officer__c</fullName>
        <label>Sr. Military /Gov't / Political Officer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Public Official</fullName>
                </value>
                <value>
                    <fullName>Governmental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Lincensed__c</fullName>
        <label>State Lincensed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terminated__c</fullName>
        <label>Terminated</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Extension__c</fullName>
        <label>Work Phone Extension</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_to_Retirement__c</fullName>
        <formula>(Retirement_Date__c - Today()) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years to Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_with_Current_Employer__c</fullName>
        <label>Years Employed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_with_Firm__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(Hire_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years with Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>FinServ__MailingAddress__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesBusiness,Contact.FinServ__IndustriesIndividual,Contact.Non_Client</value>
        </filters>
        <label>All Non-Clients</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_Birthdays_Next_7_Days</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Birthdays (Next 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_RMDs_Next_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>lessThan</operation>
            <value>70.5</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:82</value>
        </filters>
        <label>Upcoming RMDs (Next 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Contact data for an institution or a business account</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Contact data for a retail client</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Client</fullName>
        <active>true</active>
        <description>Use for Accountants/Lawyers, etc.</description>
        <label>Non-Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>false</active>
        <description>Prospect</description>
        <label>Prospect</label>
    </recordTypes>
    <validationRules>
        <fullName>FinServ__BirthdateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Check to see if Birthdate is in future</description>
        <errorConditionFormula>Birthdate &gt; Today()</errorConditionFormula>
        <errorMessage>Date of birth can't be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotHaveMoreThanOnePrimaryAddress</fullName>
        <active>true</active>
        <description>Only one address can be designated as the primary address.</description>
        <errorConditionFormula>IF(IF(FinServ__PrimaryAddressIsMailing__c,1,0) + IF(FinServ__PrimaryAddressIsOther__c,1,0)+  IF(FinServ__PrimaryAddressIsBilling__c,1,0)+ IF(FinServ__PrimaryAddressIsShipping__c,1,0)&gt;1,true,false)</errorConditionFormula>
        <errorMessage>Only one address can be designated as the primary address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__ContactCannotBeAssociatedToHousehold</fullName>
        <active>true</active>
        <description>Check to see if contact is associated directly to household</description>
        <errorConditionFormula>Account.RecordType.DeveloperName='IndustriesHousehold'</errorConditionFormula>
        <errorMessage>Can't associate a lead or contact to a household account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__IndividualCannotHaveMoreThanOneContact</fullName>
        <active>false</active>
        <description>Error message when adding more than one contact to an individual account</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The selected account has an Individual record type and can't have additional contacts associated with it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, 'Standard'))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can't be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of "non-Individual" to "Individual" record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can't be changed to Individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
            ISBLANK(Account.FinServ__ConversionDateTime__c), 
            AND( 
                NOT(ISBLANK(FinServ__ReferredByUser__c)), 
                NOT(ISBLANK(FinServ__ReferredByContact__c)) 
            ) 
        )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>